--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -77,7 +77,7 @@
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\constants.h" />
+    <ClInclude Include="..\Client_IPv6\functions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
