--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\constants.h">
+    <ClInclude Include="..\Client_IPv6\functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
